# HAUV-Final-Engineering-Project-Mine

./: .gitignore  README.md  hauv.sh  start_nodes.sh  stop_nodes.sh
docs/: Final Project.gantt  final_project.docx
pics/: xbox_controlller.jfif
src/autopilot_pkg/: package.xml  setup.py
src/autopilot_pkg/autopilot_pkg/: acoustic_bridge_node.py  dvl_node.py  dvl_node_udp.py  (+3 more)
src/camera_pkg/: setup.py
src/gps_pkg/: package.xml  setup.cfg  setup.py
src/hauv_description/: README.md  package.xml  setup.py
src/hauv_description/hauv_description/: attitude_to_tf.py  motor_to_joint_states.py
src/hauv_description/launch/: display.launch.py
src/hauv_description/meshes/: bar30.stl  battery_large_20Ah.stl  battery_small_1p2Ah.stl  cap_aft.stl  dome_fwd.stl  dvl_electronics.stl  dvl_head.stl  esp32.stl  indicator.stl  main_tube.stl  mount_aft.stl  mount_fwd.stl  tray.stl  upboard.stl
src/hauv_description/rviz/: hauv.rviz
src/hauv_description/urdf/: hauv.urdf  hauv_lite.urdf
src/hauv_gazebo/: README.md  fly_sim.sh  package.xml  run_guidance_test.sh  run_sim.sh  setup.py  wsl_build.sh
src/hauv_gazebo_v2/: README.md  fly_sim.sh  package.xml  run_guidance_test.sh  run_sim.sh  setup.py  wsl_build.sh
src/mavlink_bridge_pkg/: package.xml  setup.cfg  setup.py
src/my_launch_pkg/: package.xml  setup.py
tests/: subsonus_test.py  test_bar_sensor.py  test_dvl.py
tests/bar_test/: bar_test.ino
tools/: SYSTEM_ARCHITECTURE_VISUAL.sh  acoustic_qgc_bridge.py  acoustic_surface.py  check_agent.py  deploy_and_flash.py  dvl_plot.py  dvl_test.py  retry_upload.py
(+20 files in other folders)
