<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hauv_description</name>
  <version>1.0.0</version>
  <description>
    URDF model, meshes and RViz2 visualisation for the HAUV. Visualisation only -
    RViz has no physics. The model can be driven from the live vehicle: thruster
    joints follow /motor_data, and the hull pose follows the real BNO055 attitude
    and BAR100 depth.
  </description>
  <maintainer email="bonnyrot@gmail.com">HAUV Team</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
